5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1573_996.log
== TEST (2019-03-11 14:53:40) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* _ _ _ * ")
print("***** ")
-- OUTPUT:
***** 
* o o * 
*  ^  * 
* _ _ _ * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:53:42) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* _ _ _ * ")
print("***** ")
-- EXECUTION TIME:
0.120176
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
*  ^  * 
* _ _ _ * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:53:44) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* _ _ _ * ")
print("***** ")
-- OUTPUT:
***** 
* o o * 
*  ^  * 
* _ _ _ * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:53:56) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
***** 
* o o * 
*  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:53:57) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print("***** ")
-- EXECUTION TIME:
0.150299
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
*  ^  * 
* --- * 
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:53:58) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print("***** ")
-- OUTPUT:
***** 
* o o * 
*  ^  * 
* --- * 
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:54:11) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print(" ***** ")
-- OUTPUT:
***** 
* o o * 
*  ^  * 
* --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:54:12) 
-- CODE:
print("***** ")
print("* o o * ")
print("*  ^  * ")
print("* --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.139752
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o * 
*  ^  * 
* --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:54:46) 
-- CODE:
print("  ***** ")
print(" * o o * ")
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
 * o o * 
 *  ^  * 
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:54:48) 
-- CODE:
print("  ***** ")
print(" * o o * ")
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.155177
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 * o o * 
 *  ^  * 
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:55:15) 
-- CODE:
print("  ***** ")
print(" * o o * ")
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
 * o o * 
 *  ^  * 
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:55:16) 
-- CODE:
print("  ***** ")
print(" * o o * ")
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- EXECUTION TIME:
0.108593
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 * o o * 
 *  ^  * 
 * --- * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:55:16) 
-- CODE:
print("  ***** ")
print(" * o o * ")
print(" *  ^  * ")
print(" * --- * ")
print("  ***** ")
-- OUTPUT:
***** 
 * o o * 
 *  ^  * 
 * --- * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:56:37) 
-- CODE:
print("  ***** ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- OUTPUT:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:56:39) 
-- CODE:
print("  ***** ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- EXECUTION TIME:
0.245696
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:57:14) 
-- CODE:
print("  ***** ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- OUTPUT:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:57:15) 
-- CODE:
print("  ***** ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- EXECUTION TIME:
0.146811
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:57:15) 
-- CODE:
print("  ***** ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- OUTPUT:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:57:16) 
-- CODE:
print("  ***** ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- EXECUTION TIME:
0.136466
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:57:17) 
-- CODE:
print("  ***** ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- OUTPUT:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:57:18) 
-- CODE:
print("  ***** ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- EXECUTION TIME:
0.200853
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:00:36) 
-- CODE:
print("  ***** ")

print(" * o o  * ")

print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- OUTPUT:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:00:37) 
-- CODE:
print("  ***** ")

print(" * o o  * ")

print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- EXECUTION TIME:
0.119102
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:00:37) 
-- CODE:
print("  ***** ")

print(" * o o  * ")

print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- OUTPUT:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:00:39) 
-- CODE:
print("  ***** ")

print(" * o o  * ")

print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- EXECUTION TIME:
0.162621
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:00:40) 
-- CODE:
print("  ***** ")

print(" * o o  * ")

print(" *  ^   * ")
print(" * ---  * ")
print("  ***** ")
-- OUTPUT:
***** 
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:01:19) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:01:21) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.222729
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:53) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:05:54) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.190248
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:05:54) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:24) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:25) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.165783
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:36) 
-- CODE:
print("  *****   ")

print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:37) 
-- CODE:
print("  *****   ")

print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.122709
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:18:38) 
-- CODE:
print("  *****   ")

print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.188126
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:18:47) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:20:01) 
-- CODE:
print "  *****   "
print(" * o o  * ")
print " *  ^   * "
print " * ---  * "
print "  *****   "
-- ERROR:
File "XXXX", line 1
    print "  *****   "
                     ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("  *****   ")?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:20:02) 
-- CODE:
print "  *****   "
print(" * o o  * ")
print " *  ^   * "
print " * ---  * "
print "  *****   "
-- EXECUTION TIME:
0.172399
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print "  *****   "
                     ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:20:08) 
-- CODE:
print "  *****   "
print(" * o o  * ")
print " *  ^   * "
print " * ---  * "
print "  *****   "
-- ERROR:
File "XXXX", line 1
    print "  *****   "
                     ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("  *****   ")?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:20:09) 
-- CODE:
print "  *****   "
print(" * o o  * ")
print " *  ^   * "
print " * ---  * "
print "  *****   "
-- EXECUTION TIME:
0.218679
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print "  *****   "
                     ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:25:58) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:25:59) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.119337
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:25:59) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.156903
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:46:59) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:47:00) 
-- CODE:
print("  *****   ")
print(" * o o  * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.214977
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
 * o o  * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:47:45) 
-- CODE:
print("  *****   ")
print("(* o o *) * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
(* o o *) * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:47:46) 
-- CODE:
print("  *****   ")
print("(* o o *) * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.152874
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
(* o o *) * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:47:48) 
-- CODE:
print("  *****   ")
print("(* o o *) * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
(* o o *) * 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:47:49) 
-- CODE:
print("  *****   ")
print("(* o o *) * ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.142707
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
(* o o *) * 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:47:55) 
-- CODE:
print("  *****   ")
print("(* o o *) ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- OUTPUT:
*****   
(* o o *) 
 *  ^   * 
 * ---  * 
  *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:47:56) 
-- CODE:
print("  *****   ")
print("(* o o *) ")
print(" *  ^   * ")
print(" * ---  * ")
print("  *****   ")
-- EXECUTION TIME:
0.175682
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****   
(* o o *) 
 *  ^   * 
 * ---  * 
  *****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
